--- a/index.html
+++ b/index.html
@@ -54,145 +54,4 @@
   <button id="clear-btn">🗑 Очистить</button>
 </div>
 
-<div id="canvas-wrap"><canvas id="c"></canvas></div>
-<div id="brush"></div>
-
-<div id="overlay">
-  <h2>📱 Подключите телефон-кисть</h2>
-  <p>Отсканируйте QR или откройте ссылку на телефоне</p>
-  <img id="qr-img" width="200" height="200" src="" alt="QR">
-  <div id="code-big">—</div>
-  <div id="phone-url">Подключение к серверу...</div>
-  <div id="wait">⏳ Ожидание телефона...</div>
-  <div id="debug"></div>
-</div>
-
-<script>
-// Canvas setup
-const canvas = document.getElementById('c');
-const ctx = canvas.getContext('2d');
-const brush = document.getElementById('brush');
-
-function resize() {
-  canvas.width = canvas.parentElement.offsetWidth;
-  canvas.height = canvas.parentElement.offsetHeight;
-  ctx.fillStyle = 'white';
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
-}
-resize();
-window.addEventListener('resize', resize);
-
-let isDrawing = false, lastX = null, lastY = null;
-let color = '#1a1a1a', size = 10;
-let nx = 0.5, ny = 0.5;
-
-function draw() {
-  const x = nx * canvas.width;
-  const y = ny * canvas.height;
-  brush.style.left = (nx * 100) + 'vw';
-  brush.style.top = (50 + ny * (window.innerHeight - 50)) + 'px';
-  brush.style.width = size * 2 + 'px';
-  brush.style.height = size * 2 + 'px';
-  brush.style.background = isDrawing ? color : 'transparent';
-  brush.style.borderColor = color;
-  if (!isDrawing || lastX === null) { lastX = x; lastY = y; return; }
-  ctx.strokeStyle = color; ctx.lineWidth = size;
-  ctx.lineCap = 'round'; ctx.lineJoin = 'round';
-  ctx.beginPath(); ctx.moveTo(lastX, lastY); ctx.lineTo(x, y); ctx.stroke();
-  lastX = x; lastY = y;
-}
-
-function handleData(d) {
-  if (d.type === 'move') {
-    nx = Math.max(0, Math.min(1, nx + d.dx * 0.012));
-    ny = Math.max(0, Math.min(1, ny + d.dy * 0.012));
-    draw();
-  } else if (d.type === 'draw') {
-    isDrawing = d.v; if (!isDrawing) { lastX = null; lastY = null; } draw();
-  } else if (d.type === 'color') { color = d.v; }
-  else if (d.type === 'size') { size = d.v; }
-  else if (d.type === 'clear') {
-    ctx.fillStyle = 'white'; ctx.fillRect(0, 0, canvas.width, canvas.height);
-    lastX = null; lastY = null;
-  }
-}
-
-document.getElementById('clear-btn').addEventListener('click', () => {
-  ctx.fillStyle = 'white'; ctx.fillRect(0, 0, canvas.width, canvas.height);
-});
-
-// === PEERJS с несколькими серверами-запасными ===
-const debug = document.getElementById('debug');
-let peer, peerReady = false;
-
-function setDebug(msg) { debug.textContent = msg; }
-function setUrl(peerId) {
-  const base = location.href.replace(/\/[^/]*$/, '');
-  const phoneUrl = base + '/phone.html?room=' + peerId;
-  document.getElementById('phone-url').textContent = phoneUrl;
-  document.getElementById('qr-img').src =
-    'https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=' + encodeURIComponent(phoneUrl);
-  const code = peerId.slice(-6).toUpperCase();
-  document.getElementById('room-code').textContent = code;
-  document.getElementById('code-big').textContent = code;
-}
-
-function tryPeer(config, attempt) {
-  setDebug('Попытка ' + attempt + '...');
-  if (peer) { try { peer.destroy(); } catch(e) {} }
-
-  peer = config ? new Peer(config) : new Peer();
-
-  const timeout = setTimeout(() => {
-    setDebug('Таймаут попытки ' + attempt);
-    if (!peerReady) tryNext(attempt);
-  }, 6000);
-
-  peer.on('open', id => {
-    clearTimeout(timeout);
-    peerReady = true;
-    setDebug('✅ Сервер: ' + (attempt === 1 ? 'default' : attempt === 2 ? 'peerjs.com' : 'custom'));
-    setUrl(id);
-  });
-
-  peer.on('error', e => {
-    clearTimeout(timeout);
-    setDebug('Ошибка попытки ' + attempt + ': ' + e.type);
-    if (!peerReady) tryNext(attempt);
-  });
-
-  peer.on('connection', conn => {
-    conn.on('open', () => {
-      document.getElementById('overlay').style.display = 'none';
-      document.getElementById('status').className = 'connected';
-      document.getElementById('status').textContent = '✅ Телефон подключён';
-    });
-    conn.on('data', handleData);
-    conn.on('close', () => {
-      document.getElementById('status').className = '';
-      document.getElementById('status').textContent = '⏳ Отключился';
-      document.getElementById('overlay').style.display = 'flex';
-      isDrawing = false; lastX = null; lastY = null;
-    });
-  });
-}
-
-function tryNext(attempt) {
-  if (attempt === 1) {
-    tryPeer({ host: '0.peerjs.com', port: 443, path: '/', secure: true,
-      config: { iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] }
-    }, 2);
-  } else if (attempt === 2) {
-    tryPeer({ host: 'peerjs.herokuapp.com', port: 443, path: '/', secure: true }, 3);
-  } else {
-    setDebug('❌ Не удалось подключиться ни к одному серверу. Проверьте интернет на проекторе.');
-    document.getElementById('phone-url').textContent = '⚠️ Нет соединения с интернетом или WebRTC заблокирован';
-    document.getElementById('wait').textContent = '❌ Попробуйте перезагрузить страницу';
-  }
-}
-
-// Начинаем с дефолтного PeerJS
-tryPeer(null, 1);
-</script>
-</body>
-</html>
+<div id="canvas-wrap"><canvas id="
