--- a/index.html
+++ b/index.html
@@ -2,56 +2,254 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>🎨 Холст художника</title>
+  <title>🎨 Холст</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #111; font-family: Arial, sans-serif; color: white; overflow: hidden; height: 100vh; }
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { background:#111; color:white; font-family:Arial,sans-serif; overflow:hidden; height:100vh; }
+
     #ui {
-      position: fixed; top: 0; left: 0; right: 0;
-      background: rgba(0,0,0,0.85); padding: 10px 20px;
-      display: flex; align-items: center; gap: 16px; z-index: 10;
+      position:fixed; top:0; left:0; right:0; height:52px;
+      background:rgba(0,0,0,0.9); border-bottom:1px solid rgba(255,255,255,0.08);
+      display:flex; align-items:center; gap:14px; padding:0 20px; z-index:10;
     }
-    #room-code { font-size: 22px; font-weight: bold; letter-spacing: 5px; color: #ffd700; }
-    #status { font-size: 13px; padding: 4px 12px; border-radius: 20px; background: rgba(255,200,0,0.2); color: #ffd700; }
-    #status.connected { background: rgba(0,200,100,0.2); color: #0f0; }
+    #dot { width:10px; height:10px; border-radius:50%; background:#ffd700; flex-shrink:0; }
+    #dot.on { background:#00ff88; box-shadow:0 0 8px #00ff88; }
+    #ui-status { font-size:14px; color:#aaa; }
     #clear-btn {
-      margin-left: auto; background: rgba(255,50,50,0.3);
-      border: 1px solid rgba(255,50,50,0.5); color: white;
-      padding: 5px 14px; border-radius: 20px; cursor: pointer; font-size: 14px;
+      margin-left:auto; background:rgba(255,60,60,0.25);
+      border:1px solid rgba(255,60,60,0.4); color:white;
+      padding:6px 18px; border-radius:20px; cursor:pointer; font-size:13px;
     }
-    #canvas-wrap { position: absolute; top: 50px; left: 0; right: 0; bottom: 0; }
-    canvas#c { display: block; width: 100%; height: 100%; }
+
+    #canvas-wrap { position:absolute; top:52px; left:0; right:0; bottom:0; }
+    canvas { width:100%; height:100%; display:block; }
+
     #brush {
-      position: fixed; border-radius: 50%; pointer-events: none;
-      transform: translate(-50%, -50%); border: 3px solid #333;
-      z-index: 5;
+      position:fixed; border-radius:50%; pointer-events:none;
+      transform:translate(-50%,-50%); border:3px solid #333;
+      z-index:5; display:none;
     }
+
+    /* Оверлей */
     #overlay {
-      position: fixed; inset: 0; background: rgba(0,0,0,0.92);
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      z-index: 100; gap: 10px;
+      position:fixed; inset:0; background:#09091a;
+      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      z-index:100; gap:16px; padding:20px;
     }
-    #overlay h2 { font-size: 28px; }
-    #overlay p { color: #aaa; font-size: 15px; }
-    #code-big { font-size: 56px; font-weight: bold; letter-spacing: 14px; color: #ffd700; margin: 6px 0; }
-    #qr-img { border-radius: 12px; }
-    #phone-url {
-      font-size: 13px; color: #6af; max-width: 600px; text-align: center;
-      word-break: break-all; background: rgba(255,255,255,0.05);
-      padding: 8px 14px; border-radius: 8px;
+    h1 { font-size:28px; }
+    .sub { color:#666; font-size:15px; text-align:center; }
+
+    /* Шаги */
+    .step {
+      width:100%; max-width:600px;
+      background:rgba(255,255,255,0.04); border:1px solid rgba(255,255,255,0.1);
+      border-radius:16px; padding:18px 22px;
     }
-    #debug { font-size: 11px; color: #555; margin-top: 4px; }
-    @keyframes pulse { 0%,100%{opacity:1} 50%{opacity:.3} }
-    #wait { animation: pulse 1.5s infinite; color: #666; font-size: 13px; }
+    .step-title { font-size:13px; color:#888; text-transform:uppercase; letter-spacing:1px; margin-bottom:10px; }
+
+    /* Код оффер */
+    #offer-box {
+      font-size:11px; font-family:'Courier New',monospace;
+      background:#000; color:#0f0; padding:12px; border-radius:10px;
+      word-break:break-all; line-height:1.5; max-height:80px; overflow:hidden;
+      margin-bottom:10px;
+    }
+    #copy-btn {
+      background:#4a90e2; border:none; color:white;
+      padding:8px 20px; border-radius:10px; cursor:pointer; font-size:14px;
+    }
+    #copy-btn:active { background:#2a70c2; }
+
+    /* Поле ввода ответа */
+    #answer-area {
+      width:100%; font-size:11px; font-family:'Courier New',monospace;
+      background:#000; color:#0f0; border:1px solid rgba(255,255,255,0.15);
+      border-radius:10px; padding:10px; height:80px; resize:none;
+      margin-bottom:10px;
+    }
+    #connect-btn {
+      background:#00c853; border:none; color:white;
+      padding:8px 24px; border-radius:10px; cursor:pointer; font-size:14px;
+    }
+    #connect-btn:disabled { background:#333; color:#666; cursor:default; }
+
+    #step2 { opacity:0.4; pointer-events:none; transition:opacity .3s; }
+    #step2.active { opacity:1; pointer-events:auto; }
+
+    #conn-status { font-size:13px; color:#888; min-height:18px; }
+    @keyframes blink { 0%,100%{opacity:1} 50%{opacity:.2} }
+    .blinking { animation:blink 1.5s infinite; }
   </style>
 </head>
 <body>
 
 <div id="ui">
-  <span>🎨 Холст</span>
-  <div id="room-code">—</div>
-  <div id="status">⏳ Ожидание</div>
+  <div id="dot"></div>
+  <div id="ui-status">Ожидание телефона...</div>
   <button id="clear-btn">🗑 Очистить</button>
 </div>
 
-<div id="canvas-wrap"><canvas id="
+<div id="canvas-wrap"><canvas id="c"></canvas></div>
+<div id="brush"></div>
+
+<div id="overlay">
+  <h1>🎨 Холст художника</h1>
+  <p class="sub">Подключите телефон-кисть — два шага</p>
+
+  <!-- Шаг 1: скопировать оффер -->
+  <div class="step" id="step1">
+    <div class="step-title">Шаг 1 — Скопируйте этот код и введите его на телефоне</div>
+    <div id="offer-box" class="blinking">Генерация кода...</div>
+    <button id="copy-btn">📋 Скопировать код</button>
+  </div>
+
+  <!-- Шаг 2: вставить ответ -->
+  <div class="step" id="step2">
+    <div class="step-title">Шаг 2 — Вставьте ответный код с телефона сюда</div>
+    <textarea id="answer-area" placeholder="Вставьте ответный код с телефона..."></textarea>
+    <button id="connect-btn">🔗 Подключиться</button>
+  </div>
+
+  <div id="conn-status"></div>
+</div>
+
+<script>
+// ── Canvas ──────────────────────────────────────
+const canvas = document.getElementById('c');
+const ctx    = canvas.getContext('2d');
+const brush  = document.getElementById('brush');
+
+function resize() {
+  canvas.width  = canvas.parentElement.offsetWidth;
+  canvas.height = canvas.parentElement.offsetHeight;
+  ctx.fillStyle = 'white';
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+}
+resize();
+window.addEventListener('resize', resize);
+
+let drawing=false, lx=null, ly=null, color='#1a1a1a', size=10, nx=.5, ny=.5;
+
+function drawStep() {
+  const x = nx * canvas.width, y = ny * canvas.height;
+  brush.style.display    = 'block';
+  brush.style.left       = (nx*100)+'vw';
+  brush.style.top        = (52 + ny*(window.innerHeight-52))+'px';
+  brush.style.width      = brush.style.height = size*2+'px';
+  brush.style.background = drawing ? color : 'transparent';
+  brush.style.borderColor= color;
+  if (!drawing || lx===null) { lx=x; ly=y; return; }
+  ctx.strokeStyle=color; ctx.lineWidth=size;
+  ctx.lineCap=ctx.lineJoin='round';
+  ctx.beginPath(); ctx.moveTo(lx,ly); ctx.lineTo(x,y); ctx.stroke();
+  lx=x; ly=y;
+}
+
+function clearCanvas() {
+  ctx.fillStyle='white'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  lx=ly=null;
+}
+document.getElementById('clear-btn').addEventListener('click', clearCanvas);
+
+// ── WebRTC ──────────────────────────────────────
+let pc, dc;
+
+async function init() {
+  pc = new RTCPeerConnection({ iceServers:[] }); // без серверов — локальная сеть!
+
+  dc = pc.createDataChannel('paint');
+  dc.onopen    = onConnected;
+  dc.onmessage = e => handleCmd(JSON.parse(e.data));
+  dc.onclose   = onDisconnected;
+
+  // Ждём ICE кандидатов и формируем полный оффер
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+
+  await waitIce(pc);
+
+  // Показываем сжатый оффер
+  const offerStr = compress(JSON.stringify(pc.localDescription));
+  document.getElementById('offer-box').textContent = offerStr;
+  document.getElementById('offer-box').classList.remove('blinking');
+
+  // Активируем шаг 2
+  document.getElementById('step2').classList.add('active');
+
+  document.getElementById('copy-btn').addEventListener('click', () => {
+    navigator.clipboard.writeText(offerStr).then(() => {
+      document.getElementById('copy-btn').textContent = '✅ Скопировано!';
+      setTimeout(()=>document.getElementById('copy-btn').textContent='📋 Скопировать код', 2000);
+    }).catch(() => {
+      // Фоллбэк для Android TV
+      const ta = document.createElement('textarea');
+      ta.value = offerStr; document.body.appendChild(ta);
+      ta.select(); document.execCommand('copy'); document.body.removeChild(ta);
+      document.getElementById('copy-btn').textContent = '✅ Скопировано!';
+      setTimeout(()=>document.getElementById('copy-btn').textContent='📋 Скопировать код', 2000);
+    });
+  });
+
+  document.getElementById('connect-btn').addEventListener('click', async () => {
+    const answerStr = document.getElementById('answer-area').value.trim();
+    if (!answerStr) return;
+    document.getElementById('conn-status').textContent = '⏳ Подключение...';
+    try {
+      const answer = JSON.parse(decompress(answerStr));
+      await pc.setRemoteDescription(answer);
+    } catch(e) {
+      document.getElementById('conn-status').textContent = '❌ Неверный код: ' + e.message;
+    }
+  });
+}
+
+function waitIce(pc) {
+  return new Promise(resolve => {
+    if (pc.iceGatheringState === 'complete') { resolve(); return; }
+    pc.onicegatheringstatechange = () => {
+      if (pc.iceGatheringState === 'complete') resolve();
+    };
+    setTimeout(resolve, 4000); // максимум 4 сек
+  });
+}
+
+function onConnected() {
+  document.getElementById('overlay').style.display = 'none';
+  document.getElementById('dot').className = 'on';
+  document.getElementById('ui-status').textContent = '✅ Телефон подключён';
+}
+
+function onDisconnected() {
+  document.getElementById('overlay').style.display = 'flex';
+  document.getElementById('dot').className = '';
+  document.getElementById('ui-status').textContent = 'Телефон отключился';
+  drawing=false; lx=ly=null;
+  init(); // перезапускаем
+}
+
+function handleCmd(cmd) {
+  if (cmd.t==='m') {
+    nx = Math.max(0, Math.min(1, nx + cmd.x * 0.013));
+    ny = Math.max(0, Math.min(1, ny + cmd.y * 0.013));
+    drawStep();
+  } else if (cmd.t==='d') {
+    drawing=cmd.v; if(!drawing){lx=ly=null;} drawStep();
+  } else if (cmd.t==='c') { color=cmd.v; }
+  else if (cmd.t==='s')   { size=cmd.v; }
+  else if (cmd.t==='clr') { clearCanvas(); }
+}
+
+// ── Сжатие (base64) ─────────────────────────────
+function compress(str) {
+  return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
+    (m,p1)=>String.fromCharCode('0x'+p1)));
+}
+function decompress(str) {
+  return decodeURIComponent(Array.from(atob(str),
+    c=>'%'+('00'+c.charCodeAt(0).toString(16)).slice(-2)).join(''));
+}
+
+init();
+</script>
+</body>
+</html>
