--- a/phone.html
+++ b/phone.html
@@ -2,247 +2,254 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>🖌 Кисть</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.5.2/peerjs.min.js"></script>
+  <title>🎨 Холст</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      background: #0f0f1a; color: white; font-family: Arial, sans-serif;
-      height: 100vh; display: flex; flex-direction: column;
-      align-items: center; justify-content: center; touch-action: none;
-      user-select: none;
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { background:#111; color:white; font-family:Arial,sans-serif; overflow:hidden; height:100vh; }
+
+    #ui {
+      position:fixed; top:0; left:0; right:0; height:52px;
+      background:rgba(0,0,0,0.9); border-bottom:1px solid rgba(255,255,255,0.08);
+      display:flex; align-items:center; gap:14px; padding:0 20px; z-index:10;
     }
-    h2 { font-size: 22px; margin-bottom: 6px; }
-    #status { font-size: 13px; color: #888; margin-bottom: 24px; }
-    #status.ok { color: #0f0; }
-    #brush-btn {
-      width: 160px; height: 160px; border-radius: 50%;
-      background: radial-gradient(circle, #4a90e2, #1a3a6e);
-      border: 4px solid #4a90e2; font-size: 18px; color: white;
-      cursor: pointer; display: flex; align-items: center; justify-content: center;
-      flex-direction: column; gap: 4px; box-shadow: 0 0 30px rgba(74,144,226,0.4);
-      -webkit-tap-highlight-color: transparent;
-      transition: transform 0.1s, box-shadow 0.1s;
+    #dot { width:10px; height:10px; border-radius:50%; background:#ffd700; flex-shrink:0; }
+    #dot.on { background:#00ff88; box-shadow:0 0 8px #00ff88; }
+    #ui-status { font-size:14px; color:#aaa; }
+    #clear-btn {
+      margin-left:auto; background:rgba(255,60,60,0.25);
+      border:1px solid rgba(255,60,60,0.4); color:white;
+      padding:6px 18px; border-radius:20px; cursor:pointer; font-size:13px;
     }
-    #brush-btn.active {
-      background: radial-gradient(circle, #e24a4a, #6e1a1a);
-      border-color: #e24a4a; box-shadow: 0 0 40px rgba(226,74,74,0.6);
-      transform: scale(0.96);
+
+    #canvas-wrap { position:absolute; top:52px; left:0; right:0; bottom:0; }
+    canvas { width:100%; height:100%; display:block; }
+
+    #brush {
+      position:fixed; border-radius:50%; pointer-events:none;
+      transform:translate(-50%,-50%); border:3px solid #333;
+      z-index:5; display:none;
     }
-    #brush-btn span { font-size: 40px; }
-    .controls { margin-top: 30px; display: flex; flex-direction: column; gap: 16px; width: 90%; max-width: 340px; }
-    .control-row { display: flex; align-items: center; gap: 12px; }
-    label { font-size: 14px; color: #aaa; width: 80px; }
-    input[type=range] { flex: 1; accent-color: #4a90e2; }
-    input[type=color] { width: 48px; height: 36px; border: none; border-radius: 8px; cursor: pointer; }
-    .colors { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 4px; }
-    .color-btn {
-      width: 36px; height: 36px; border-radius: 50%; cursor: pointer;
-      border: 3px solid transparent; transition: border-color 0.2s;
+
+    /* Оверлей */
+    #overlay {
+      position:fixed; inset:0; background:#09091a;
+      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      z-index:100; gap:16px; padding:20px;
     }
-    .color-btn.active { border-color: white; }
-    #clear-phone {
-      margin-top: 8px; background: rgba(255,50,50,0.2);
-      border: 1px solid rgba(255,50,50,0.4); color: white;
-      padding: 10px; border-radius: 12px; cursor: pointer; font-size: 14px; width: 100%;
+    h1 { font-size:28px; }
+    .sub { color:#666; font-size:15px; text-align:center; }
+
+    /* Шаги */
+    .step {
+      width:100%; max-width:600px;
+      background:rgba(255,255,255,0.04); border:1px solid rgba(255,255,255,0.1);
+      border-radius:16px; padding:18px 22px;
     }
-    #connect-screen { text-align: center; }
-    #room-input {
-      font-size: 28px; letter-spacing: 6px; text-align: center;
-      background: rgba(255,255,255,0.1); border: 2px solid rgba(255,255,255,0.2);
-      color: white; padding: 12px 20px; border-radius: 12px; width: 220px;
-      margin: 16px 0; text-transform: uppercase;
+    .step-title { font-size:13px; color:#888; text-transform:uppercase; letter-spacing:1px; margin-bottom:10px; }
+
+    /* Код оффер */
+    #offer-box {
+      font-size:11px; font-family:'Courier New',monospace;
+      background:#000; color:#0f0; padding:12px; border-radius:10px;
+      word-break:break-all; line-height:1.5; max-height:80px; overflow:hidden;
+      margin-bottom:10px;
+    }
+    #copy-btn {
+      background:#4a90e2; border:none; color:white;
+      padding:8px 20px; border-radius:10px; cursor:pointer; font-size:14px;
+    }
+    #copy-btn:active { background:#2a70c2; }
+
+    /* Поле ввода ответа */
+    #answer-area {
+      width:100%; font-size:11px; font-family:'Courier New',monospace;
+      background:#000; color:#0f0; border:1px solid rgba(255,255,255,0.15);
+      border-radius:10px; padding:10px; height:80px; resize:none;
+      margin-bottom:10px;
     }
     #connect-btn {
-      background: #4a90e2; border: none; color: white;
-      padding: 12px 30px; border-radius: 12px; font-size: 16px; cursor: pointer;
+      background:#00c853; border:none; color:white;
+      padding:8px 24px; border-radius:10px; cursor:pointer; font-size:14px;
     }
-    #main-screen { display: none; width: 100%; align-items: center; flex-direction: column; }
-    #hint { font-size: 12px; color: #555; margin-top: 12px; text-align: center; }
+    #connect-btn:disabled { background:#333; color:#666; cursor:default; }
+
+    #step2 { opacity:0.4; pointer-events:none; transition:opacity .3s; }
+    #step2.active { opacity:1; pointer-events:auto; }
+
+    #conn-status { font-size:13px; color:#888; min-height:18px; }
+    @keyframes blink { 0%,100%{opacity:1} 50%{opacity:.2} }
+    .blinking { animation:blink 1.5s infinite; }
   </style>
 </head>
 <body>
 
-<div id="connect-screen">
-  <h2>📱 Кисть-телефон</h2>
-  <p style="color:#888; margin-bottom:10px;">Введите код с проектора</p>
-  <input id="room-input" type="text" maxlength="6" placeholder="XXXXXX">
-  <br>
-  <button id="connect-btn">Подключиться</button>
-  <div id="conn-status" style="margin-top:12px; color:#888; font-size:13px;"></div>
+<div id="ui">
+  <div id="dot"></div>
+  <div id="ui-status">Ожидание телефона...</div>
+  <button id="clear-btn">🗑 Очистить</button>
 </div>
 
-<div id="main-screen">
-  <h2>🖌 Кисть готова!</h2>
-  <div id="status">Подключение...</div>
-  <div id="brush-btn">
-    <span>✏️</span>
-    <div style="font-size:14px">Зажми для рисования</div>
+<div id="canvas-wrap"><canvas id="c"></canvas></div>
+<div id="brush"></div>
+
+<div id="overlay">
+  <h1>🎨 Холст художника</h1>
+  <p class="sub">Подключите телефон-кисть — два шага</p>
+
+  <!-- Шаг 1: скопировать оффер -->
+  <div class="step" id="step1">
+    <div class="step-title">Шаг 1 — Скопируйте этот код и введите его на телефоне</div>
+    <div id="offer-box" class="blinking">Генерация кода...</div>
+    <button id="copy-btn">📋 Скопировать код</button>
   </div>
-  <div id="hint">Двигай телефон — управляй кистью<br>Зажми кнопку — рисуй!</div>
-  <div class="controls">
-    <div class="control-row">
-      <label>Размер:</label>
-      <input type="range" id="size-range" min="2" max="40" value="10">
-    </div>
-    <div class="control-row">
-      <label>Цвет:</label>
-      <div class="colors" id="palette"></div>
-    </div>
-    <div class="control-row">
-      <label>Свой цвет:</label>
-      <input type="color" id="color-pick" value="#1a1a1a">
-    </div>
-    <button id="clear-phone">🗑 Очистить холст</button>
+
+  <!-- Шаг 2: вставить ответ -->
+  <div class="step" id="step2">
+    <div class="step-title">Шаг 2 — Вставьте ответный код с телефона сюда</div>
+    <textarea id="answer-area" placeholder="Вставьте ответный код с телефона..."></textarea>
+    <button id="connect-btn">🔗 Подключиться</button>
   </div>
+
+  <div id="conn-status"></div>
 </div>
 
 <script>
-const COLORS = ['#1a1a1a','#e63946','#f4a261','#2a9d8f','#264653','#e9c46a','#a8dadc','#457b9d','#ffffff'];
-let conn, activeColor = '#1a1a1a';
-let isDrawing = false;
-let lastAlpha = null, lastBeta = null, lastGamma = null;
+// ── Canvas ──────────────────────────────────────
+const canvas = document.getElementById('c');
+const ctx    = canvas.getContext('2d');
+const brush  = document.getElementById('brush');
 
-// Check URL for room param
-const urlRoom = new URLSearchParams(location.search).get('room');
-if (urlRoom) {
-  document.getElementById('room-input').value = urlRoom.slice(-6).toUpperCase();
-  document.getElementById('connect-screen').querySelector('p').textContent = 'Код заполнен автоматически!';
+function resize() {
+  canvas.width  = canvas.parentElement.offsetWidth;
+  canvas.height = canvas.parentElement.offsetHeight;
+  ctx.fillStyle = 'white';
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+}
+resize();
+window.addEventListener('resize', resize);
+
+let drawing=false, lx=null, ly=null, color='#1a1a1a', size=10, nx=.5, ny=.5;
+
+function drawStep() {
+  const x = nx * canvas.width, y = ny * canvas.height;
+  brush.style.display    = 'block';
+  brush.style.left       = (nx*100)+'vw';
+  brush.style.top        = (52 + ny*(window.innerHeight-52))+'px';
+  brush.style.width      = brush.style.height = size*2+'px';
+  brush.style.background = drawing ? color : 'transparent';
+  brush.style.borderColor= color;
+  if (!drawing || lx===null) { lx=x; ly=y; return; }
+  ctx.strokeStyle=color; ctx.lineWidth=size;
+  ctx.lineCap=ctx.lineJoin='round';
+  ctx.beginPath(); ctx.moveTo(lx,ly); ctx.lineTo(x,y); ctx.stroke();
+  lx=x; ly=y;
 }
 
-// Build palette
-const palette = document.getElementById('palette');
-COLORS.forEach(c => {
-  const btn = document.createElement('div');
-  btn.className = 'color-btn' + (c === activeColor ? ' active' : '');
-  btn.style.background = c;
-  btn.style.border = c === '#ffffff' ? '2px solid #555' : '';
-  btn.addEventListener('click', () => {
-    document.querySelectorAll('.color-btn').forEach(b => b.classList.remove('active'));
-    btn.classList.add('active');
-    activeColor = c;
-    if (conn) conn.send({ type: 'color', v: c });
-  });
-  palette.appendChild(btn);
-});
-
-document.getElementById('color-pick').addEventListener('input', e => {
-  activeColor = e.target.value;
-  document.querySelectorAll('.color-btn').forEach(b => b.classList.remove('active'));
-  if (conn) conn.send({ type: 'color', v: activeColor });
-});
-
-document.getElementById('size-range').addEventListener('input', e => {
-  if (conn) conn.send({ type: 'size', v: +e.target.value });
-});
-
-document.getElementById('clear-phone').addEventListener('click', () => {
-  if (conn) conn.send({ type: 'clear' });
-});
-
-// Brush button
-const brushBtn = document.getElementById('brush-btn');
-brushBtn.addEventListener('touchstart', e => {
-  e.preventDefault(); startDraw();
-}, { passive: false });
-brushBtn.addEventListener('touchend', e => {
-  e.preventDefault(); stopDraw();
-}, { passive: false });
-brushBtn.addEventListener('mousedown', startDraw);
-brushBtn.addEventListener('mouseup', stopDraw);
-
-function startDraw() {
-  isDrawing = true;
-  brushBtn.classList.add('active');
-  brushBtn.querySelector('div').textContent = '🔴 Рисую!';
-  if (conn) conn.send({ type: 'draw', v: true });
+function clearCanvas() {
+  ctx.fillStyle='white'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  lx=ly=null;
 }
-function stopDraw() {
-  isDrawing = false;
-  brushBtn.classList.remove('active');
-  brushBtn.querySelector('div').textContent = 'Зажми для рисования';
-  if (conn) conn.send({ type: 'draw', v: false });
-}
+document.getElementById('clear-btn').addEventListener('click', clearCanvas);
 
-// Accelerometer
-function initAccelerometer() {
-  if (typeof DeviceMotionEvent !== 'undefined' && typeof DeviceMotionEvent.requestPermission === 'function') {
-    // iOS 13+
-    DeviceMotionEvent.requestPermission().then(r => {
-      if (r === 'granted') startListening();
+// ── WebRTC ──────────────────────────────────────
+let pc, dc;
+
+async function init() {
+  pc = new RTCPeerConnection({ iceServers:[] }); // без серверов — локальная сеть!
+
+  dc = pc.createDataChannel('paint');
+  dc.onopen    = onConnected;
+  dc.onmessage = e => handleCmd(JSON.parse(e.data));
+  dc.onclose   = onDisconnected;
+
+  // Ждём ICE кандидатов и формируем полный оффер
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+
+  await waitIce(pc);
+
+  // Показываем сжатый оффер
+  const offerStr = compress(JSON.stringify(pc.localDescription));
+  document.getElementById('offer-box').textContent = offerStr;
+  document.getElementById('offer-box').classList.remove('blinking');
+
+  // Активируем шаг 2
+  document.getElementById('step2').classList.add('active');
+
+  document.getElementById('copy-btn').addEventListener('click', () => {
+    navigator.clipboard.writeText(offerStr).then(() => {
+      document.getElementById('copy-btn').textContent = '✅ Скопировано!';
+      setTimeout(()=>document.getElementById('copy-btn').textContent='📋 Скопировать код', 2000);
+    }).catch(() => {
+      // Фоллбэк для Android TV
+      const ta = document.createElement('textarea');
+      ta.value = offerStr; document.body.appendChild(ta);
+      ta.select(); document.execCommand('copy'); document.body.removeChild(ta);
+      document.getElementById('copy-btn').textContent = '✅ Скопировано!';
+      setTimeout(()=>document.getElementById('copy-btn').textContent='📋 Скопировать код', 2000);
     });
-  } else {
-    startListening();
-  }
-}
+  });
 
-function startListening() {
-  window.addEventListener('deviceorientation', e => {
-    if (!conn) return;
-    const beta = e.beta || 0;   // -180..180 (наклон вперед/назад)
-    const gamma = e.gamma || 0; // -90..90 (наклон влево/вправо)
-
-    if (lastBeta !== null) {
-      const dx = (gamma - lastGamma);
-      const dy = (beta - lastBeta);
-      if (Math.abs(dx) > 0.1 || Math.abs(dy) > 0.1) {
-        conn.send({ type: 'move', dx, dy });
-      }
+  document.getElementById('connect-btn').addEventListener('click', async () => {
+    const answerStr = document.getElementById('answer-area').value.trim();
+    if (!answerStr) return;
+    document.getElementById('conn-status').textContent = '⏳ Подключение...';
+    try {
+      const answer = JSON.parse(decompress(answerStr));
+      await pc.setRemoteDescription(answer);
+    } catch(e) {
+      document.getElementById('conn-status').textContent = '❌ Неверный код: ' + e.message;
     }
-    lastBeta = beta;
-    lastGamma = gamma;
   });
 }
 
-// Connect
-const peer = new Peer({ debug: 0 });
-
-document.getElementById('connect-btn').addEventListener('click', () => {
-  const code = document.getElementById('room-input').value.trim();
-  if (!code || code.length < 4) return;
-
-  document.getElementById('conn-status').textContent = '⏳ Подключение...';
-
-  // Try to find peer by last 6 chars
-  // We need to connect using full peer ID — but we only show 6 chars
-  // So we'll use the 6-char code as a custom peer ID suffix approach
-  // Actually, we need the full ID from the URL param
-  const fullId = urlRoom || null;
-  if (fullId) {
-    connectToPeer(fullId);
-  } else {
-    document.getElementById('conn-status').textContent = '⚠️ Используйте QR-код или ссылку с проектора для автоматического подключения';
-  }
-});
-
-function connectToPeer(peerId) {
-  peer.on('open', () => {
-    conn = peer.connect(peerId, { reliable: true });
-    conn.on('open', () => {
-      document.getElementById('connect-screen').style.display = 'none';
-      document.getElementById('main-screen').style.display = 'flex';
-      document.getElementById('status').className = 'ok';
-      document.getElementById('status').textContent = '✅ Подключено к проектору!';
-      conn.send({ type: 'color', v: activeColor });
-      conn.send({ type: 'size', v: +document.getElementById('size-range').value });
-      initAccelerometer();
-    });
-    conn.on('close', () => {
-      document.getElementById('status').className = '';
-      document.getElementById('status').textContent = '❌ Соединение потеряно';
-    });
+function waitIce(pc) {
+  return new Promise(resolve => {
+    if (pc.iceGatheringState === 'complete') { resolve(); return; }
+    pc.onicegatheringstatechange = () => {
+      if (pc.iceGatheringState === 'complete') resolve();
+    };
+    setTimeout(resolve, 4000); // максимум 4 сек
   });
 }
 
-// Auto-connect if URL has room param
-if (urlRoom) {
-  peer.on('open', () => {
-    document.getElementById('conn-status').textContent = '⏳ Автоподключение...';
-    connectToPeer(urlRoom);
-  });
-  // Trigger connect automatically
+function onConnected() {
+  document.getElementById('overlay').style.display = 'none';
+  document.getElementById('dot').className = 'on';
+  document.getElementById('ui-status').textContent = '✅ Телефон подключён';
 }
+
+function onDisconnected() {
+  document.getElementById('overlay').style.display = 'flex';
+  document.getElementById('dot').className = '';
+  document.getElementById('ui-status').textContent = 'Телефон отключился';
+  drawing=false; lx=ly=null;
+  init(); // перезапускаем
+}
+
+function handleCmd(cmd) {
+  if (cmd.t==='m') {
+    nx = Math.max(0, Math.min(1, nx + cmd.x * 0.013));
+    ny = Math.max(0, Math.min(1, ny + cmd.y * 0.013));
+    drawStep();
+  } else if (cmd.t==='d') {
+    drawing=cmd.v; if(!drawing){lx=ly=null;} drawStep();
+  } else if (cmd.t==='c') { color=cmd.v; }
+  else if (cmd.t==='s')   { size=cmd.v; }
+  else if (cmd.t==='clr') { clearCanvas(); }
+}
+
+// ── Сжатие (base64) ─────────────────────────────
+function compress(str) {
+  return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
+    (m,p1)=>String.fromCharCode('0x'+p1)));
+}
+function decompress(str) {
+  return decodeURIComponent(Array.from(atob(str),
+    c=>'%'+('00'+c.charCodeAt(0).toString(16)).slice(-2)).join(''));
+}
+
+init();
 </script>
 </body>
 </html>
